<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
        android:id="@+id/button1"
        android:text="@string/BTN1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_toRightOf="@id/button3"
        android:layout_below="@id/button2"/>
    
    <Button
        android:id="@+id/button2"
        android:text="@string/BTN2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toRightOf="@id/button1"/>

    <Button
        android:id="@+id/button3"
        android:text="@string/BTN3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/button2"
        android:layout_alignParentLeft="true"
        android:layout_centerHorizontal="true"

        />

    <Button
        android:id="@+id/button4"
        android:text="@string/BTN4"
        android:layout_width="175dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/button3"
        />

    <Button
        android:id="@+id/button5"
        android:text="@string/BTN5"
        android:layout_width="wrap_content"
        android:layout_height="100dp"
        android:layout_toRightOf="@id/button1"
        android:layout_below="@id/button2"
        />
</RelativeLayout>