<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:layout_margin="15dp">

    <!--un grand titre pour annoncer le nom de l'application-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Saisie des données de météo"
        android:textSize="20dp"
        android:textColor="@color/colorRepas"
        android:textStyle="italic"/>
    </LinearLayout>
    <!--Pour l'heure-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TimePicker
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:timePickerMode="clock" />

    </LinearLayout>
    <!--pour la temperature-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/temperature"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <!--pour la vitesse du vent-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/vitesseVent"/>
        <EditText
            android:layout_width="50dp"
            android:layout_height="wrap_content"
            android:inputType="number"/>

    </LinearLayout>

    <!--etat du ciel-->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/etatCiel"/>
        <Spinner
            android:entries="@array/etats"
            android:layout_width="150dp"
            android:layout_height="wrap_content"/>

    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp">
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/valider"/>
    </LinearLayout>
</LinearLayout>